2005-01-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	* flumotion/configure/Makefile.am:
	  add prefix when looking for package candidates.  Fixes some issues
	  when trying to registerPackagePaths from outside flumotion.
	* pkgconfig/Makefile.am:
	* pkgconfig/flumotion-uninstalled.pc.in:
	* pkgconfig/flumotion.pc.in:
	  point to the base dir under which flumotion lives instead

2005-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: prerelease

2005-01-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/log.py:
	* flumotion/component/component.py:
	* flumotion/manager/component.py:
	* flumotion/test/test_log.py:
	* flumotion/twisted/gstreactor.py:
	* flumotion/wizard/save.py:
	* flumotion/wizard/wizard.py:
	* flumotion/worker/job.py:
	* flumotion/worker/worker.py:
	  add more crack to the logging module

2005-01-19  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/common.py (version): Update to 2005.

2005-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/config.py:
	  remove unused code

2005-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/admin/gtk/client.py:
	* flumotion/manager/component.py:
	* flumotion/manager/worker.py:
	* flumotion/test/test_flavors.py:
	* flumotion/twisted/flavors.py:
	* flumotion/wizard/wizard.py:
	  remove likes add better than append

2005-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_worker_worker.py:
	* flumotion/worker/job.py:
	* flumotion/worker/worker.py:
	  make one function for getting the worker's socket

2005-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	* flumotion/component/feedcomponent.py:
	  attempt to reconnect when a feeder has gone away
	* flumotion/manager/worker.py:
	* flumotion/worker/worker.py: